container added to deal with mobile horizontal scroll issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,12 @@ body {
   overflow-x: hidden;
 }
 
+.container {
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: "Bebas Neue", cursive;
 }
