--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -6,7 +6,13 @@ body {
     margin: 0;
     font-family: $mainFontFamiliy;
     overflow-x: hidden;
-}   
+}
+
+.container {
+    overflow-x:hidden;
+    width: 100%;
+    height: 100%;
+}
 
 h1,h2,h3,h4,h5,h6{
     font-family: $headerFontFamily;
